Ignore copilot-issue.yml in workflow triggers

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -17,6 +17,7 @@ on:
       - '.github/release.yml'
       - '.github/workflows/publish-maven.yml'
       - '.github/workflows/weekly-upstream-sync.yml'
+      - '.github/workflows/copilot-issue.yml'
   pull_request:
     paths-ignore:
       - 'README.md'
