Add create-issue-assigned-to-copilot.ts to workflow paths

--- a/.github/workflows/copilot-issue.yml
+++ b/.github/workflows/copilot-issue.yml
@@ -12,6 +12,7 @@ on:
     branches: [main]
     paths:
       - '.github/workflows/copilot-issue.yml'
+      - '.github/scripts/create-issue-assigned-to-copilot.ts'
 
 jobs:
   create-issue:
