--- a/.github/workflows/copilot-issue.yml
+++ b/.github/workflows/copilot-issue.yml
@@ -28,7 +28,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               title,
-              assignees: ['copilot-swe-agent']
+              assignees: ['Copilot']
             });
             core.notice(`Created issue #${issue.data.number}: ${issue.data.html_url}`);
 
