--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -177,21 +177,28 @@ jobs:
                   VERSION="${{ needs.publish-maven.outputs.version }}"
                   GROUP_ID="io.github.copilot-community-sdk"
                   ARTIFACT_ID="copilot-sdk"
+                  CURRENT_TAG="v${VERSION}"
+
+                  if gh release view "${CURRENT_TAG}" >/dev/null 2>&1; then
+                    echo "Release ${CURRENT_TAG} already exists. Skipping creation."
+                    exit 0
+                  fi
                   
                   # Generate release notes from template
                   export VERSION GROUP_ID ARTIFACT_ID
                   RELEASE_NOTES=$(envsubst < .github/workflows/notes.template)
                   
                   # Get the previous tag for generating notes
-                  # Fetch all tags and find the previous version tag (excluding 'latest' and the current tag)
-                  CURRENT_TAG="v${VERSION}"
-                  PREV_TAG=$(git tag -l 'v*' --sort=-version:refname | grep -v "^${CURRENT_TAG}$" | grep -v "^latest$" | head -n 1)
+                  PREV_TAG=$(git tag --list 'v*' --sort=-version:refname \
+                    | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' \
+                    | grep -Fxv "${CURRENT_TAG}" \
+                    | head -n 1)
                   
                   echo "Current tag: ${CURRENT_TAG}"
                   echo "Previous tag: ${PREV_TAG}"
                   
                   # Build the gh release command
-                  GH_ARGS=("v${VERSION}")
+                  GH_ARGS=("${CURRENT_TAG}")
                   GH_ARGS+=("--title" "Copilot Java SDK ${VERSION}")
                   GH_ARGS+=("--notes" "${RELEASE_NOTES}")
                   GH_ARGS+=("--generate-notes")
